--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "TeslaNewsApi",
-  "engines": {
-    "node": "12"
+  "engines" : {
+    "node" : ">=8.0.0 <11.0.0"
   },
   "version": "1.0.0",
   "main": "dist/app.js",
