--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "TeslaNewsApi",
   "version": "1.0.0",
   "main": "dist/app.js",
+  "engines": { "node" : "14.16.0" },
   "scripts": {
     "build": "tsc",
     "dev": "concurrently -k -n \"Typescript,Node\" -p \"[{name}]\" -c \"blue,green\" \"tsc --watch\" \"nodemon dist/app.js\"",
