--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "TeslaNewsApi",
   "version": "1.0.0",
   "main": "dist/app.js",
-  "engines": {
-    "node": "14.16.0"
-  },
-  "engineStrict": true,
+  "engines": { "node" : "14.16.0" },
+  "engineStrict" : true,
   "scripts": {
     "build": "tsc",
     "dev": "concurrently -k -n \"Typescript,Node\" -p \"[{name}]\" -c \"blue,green\" \"tsc --watch\" \"nodemon dist/app.js\"",
@@ -15,13 +13,14 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.3",
-    "@types/node": "^16.4.2",
+    "@types/node": "^14.14.22",
     "@types/swagger-ui-express": "^4.1.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/node": "^16.4.1",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.12",
     "typescript": "^4.3.5",
