--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "TeslaNewsApi",
   "version": "1.0.0",
   "main": "dist/app.js",
-  "engines": { "node" : "14.16.0" },
-  "engineStrict" : true,
+  "engines": {
+    "node": "14.16.0"
+  },
+  "engineStrict": true,
   "scripts": {
     "build": "tsc",
     "dev": "concurrently -k -n \"Typescript,Node\" -p \"[{name}]\" -c \"blue,green\" \"tsc --watch\" \"nodemon dist/app.js\"",
@@ -11,7 +13,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.13",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "@types/swagger-ui-express": "^4.1.2",
