--- a/package.json
+++ b/package.json
@@ -9,15 +9,6 @@
     "start": "tsc && node dist/app.js"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.10.3",
-    "@types/node": "^14.14.22",
-    "@types/swagger-ui-express": "^4.1.2",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  },
   "dependencies": {
     "@types/node": "^16.4.1",
     "concurrently": "^6.2.0",
@@ -26,6 +17,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.1",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.10.3",
+    "@types/node": "^14.14.22",
+    "@types/swagger-ui-express": "^4.1.2",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
