--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^16.4.1",
-    "concurrently": "^6.2.0",
-    "nodemon": "^2.0.12",
-    "typescript": "^4.3.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.1",
-    "swagger-ui-express": "^4.1.6",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "@types/swagger-ui-express": "^4.1.2",
+    "bcrypt": "^5.0.1",
+    "concurrently": "^6.2.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.1",
     "nodemon": "^2.0.7",
+    "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
