--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.4",
-    "@types/mongoose": "^5.10.3",
-    "@types/node": "^14.14.22",
-    "@types/swagger-ui-express": "^4.1.2",
     "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
     "dotenv": "^8.2.0",
@@ -26,5 +20,13 @@
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies" : {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/mongoose": "^5.10.3",
+    "@types/node": "^14.14.22",
+    "@types/swagger-ui-express": "^4.1.2"
   }
 }
