--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "nodemon": "^2.0.7",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  },
-  "devDependencies" : {
+    "typescript": "^4.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "@types/swagger-ui-express": "^4.1.2"
-  }
+  },
 }
